--- a/www/style.css
+++ b/www/style.css
@@ -55,6 +55,10 @@ a:active {
 	color: #fff;
 }
 
+input[type=text] {
+	margin-bottom: 15px;
+}
+
 .logo {
 	padding: 0px;
 	margin: 0px;
@@ -100,6 +104,14 @@ a:active {
 
 .cntrl-2 {
 	display: block;
+}
+
+.login {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	background-color: #fff;
+	transform: translate(-50%, -50%);
 }
 
 /* Para Tablet: */
